deployfolder/objects/Login_Credential__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Auth Login Credential</label>
    <fields>
        <fullName>applicationJson__c</fullName>
        <label>applicationJson</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content-Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <label>grant_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Http_Method__c</fullName>
        <label>Http Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>